update category api
